[gd_scene load_steps=13 format=3 uid="uid://b84vekxgptrm2"]

[ext_resource type="Script" uid="uid://d005jm0yqohmj" path="res://scenes/vr_room.gd" id="1_yuxwj"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="2_8v6k3"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="3_g3a88"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="4_8vv6m"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="5_mbdhj"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="6_6iirn"]
[ext_resource type="PackedScene" uid="uid://bkgw2lscy0ukr" path="res://MainMenu.tscn" id="7_5d7e4"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="8_qykkm"]

[sub_resource type="Environment" id="Environment_v2gpp"]
background_mode = 1
background_color = Color(0.0196078, 0.0235294, 0.0392157, 1)
ambient_light_source = 3
ambient_light_color = Color(0.101961, 0.101961, 0.129412, 1)
tonemap_mode = 3
glow_enabled = true
glow_intensity = 0.5
fog_enabled = true
fog_light_color = Color(0.0196078, 0.0235294, 0.0392157, 1)
fog_density = 0.02
volumetric_fog_density = 0.01

[sub_resource type="BoxShape3D" id="BoxShape3D_r01vq"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fnh8d"]
albedo_color = Color(0.117647, 0.117647, 0.117647, 1)
metallic = 0.2
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.0784314, 0.0784314, 0.0980392, 1)
roughness = 0.8

[node name="VRRoom" type="Node3D"]
script = ExtResource("1_yuxwj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v2gpp")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
current = true

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
current = true

[node name="LeftHandController" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
pose = &"aim"

[node name="LeftHand" parent="XROrigin3D/LeftHandController" instance=ExtResource("2_8v6k3")]

[node name="FunctionTeleport" parent="XROrigin3D/LeftHandController" instance=ExtResource("5_mbdhj")]

[node name="FunctionPointer" parent="XROrigin3D/LeftHandController" instance=ExtResource("8_qykkm")]
show_laser = 2
laser_length = 1
collision_mask = 1048576

[node name="RightHandController" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
pose = &"aim"

[node name="RightHand" parent="XROrigin3D/RightHandController" instance=ExtResource("3_g3a88")]

[node name="FunctionTeleport" parent="XROrigin3D/RightHandController" instance=ExtResource("5_mbdhj")]

[node name="FunctionPointer" parent="XROrigin3D/RightHandController" instance=ExtResource("8_qykkm")]
show_laser = 2
laser_length = 1
collision_mask = 1048576

[node name="PlayerBody" parent="XROrigin3D" instance=ExtResource("4_8vv6m")]

[node name="MenuViewport" parent="." instance=ExtResource("6_6iirn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -4.79222)
collision_layer = 1048576
scene = ExtResource("7_5d7e4")
viewport_size = Vector2(1000, 600)
transparent = 0
unshaded = true
scene_properties_keys = PackedStringArray("main_menu.gd")

[node name="Room" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Floor"]
shape = SubResource("BoxShape3D_r01vq")

[node name="CSGBox3D" type="CSGBox3D" parent="Room/Floor"]
size = Vector3(20, 0.2, 20)
material = SubResource("StandardMaterial3D_fnh8d")

[node name="WallNorth" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -10)
use_collision = true
size = Vector3(20, 10, 0.5)
material = SubResource("StandardMaterial3D_wall")

[node name="WallSouth" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 10)
use_collision = true
size = Vector3(20, 10, 0.5)
material = SubResource("StandardMaterial3D_wall")

[node name="WallEast" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 0)
use_collision = true
size = Vector3(0.5, 10, 20)
material = SubResource("StandardMaterial3D_wall")

[node name="WallWest" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 5, 0)
use_collision = true
size = Vector3(0.5, 10, 20)
material = SubResource("StandardMaterial3D_wall")

[node name="Ceiling" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
use_collision = true
size = Vector3(20, 0.2, 20)
material = SubResource("StandardMaterial3D_fnh8d")

[node name="Lighting" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9.9, 0)
light_color = Color(0.784314, 0.839216, 1, 1)
light_energy = 8.0
light_indirect_energy = 2.0
spot_range = 15.0
spot_angle = 75.0

[node name="SpotLight3D2" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9.9, -5)
light_color = Color(0.784314, 0.839216, 1, 1)
light_energy = 5.0
spot_range = 10.0
spot_angle = 35.0

[node name="OmniLight3D" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -3)
light_color = Color(0.337255, 0.729412, 0.933333, 1)
light_energy = 0.5
omni_range = 3.0

[node name="MenuLight" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -0.173648, 0.984808, 0, -0.984808, -0.173648, 0, 3, -1)
light_color = Color(0.556863, 0.815686, 1, 1)
light_energy = 5.0
spot_angle = 25.0
